syntax = "proto3";

import "protoc-gen-openapiv2/options/annotations.proto";

package pbtbr;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/template-binding-relation;pbtbr";

// TemplateBoundCounts is template bound counts.
message TemplateBoundCounts {
  uint32 template_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板文件ID" }];
  uint32 bound_unnamed_app_count = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "绑定未命名服务数" }];
  uint32 bound_named_app_count = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "绑定命名服务数" }];
  uint32 bound_template_set_count = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "绑定模板套餐数" }];
}

// TemplateRevisionBoundCounts is template release bound counts.
message TemplateRevisionBoundCounts {
  uint32 template_revision_id = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板文件版本ID" }];
  uint32 bound_unnamed_app_count = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "绑定未命名服务数" }];
  uint32 bound_named_app_count = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "绑定命名服务数" }];
}

// TemplateSetBoundCounts is template set bound counts.
message TemplateSetBoundCounts {
  uint32 template_set_id = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板套餐ID" }];
  uint32 bound_unnamed_app_count = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "绑定未命名服务数" }];
  uint32 bound_named_app_count = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "绑定命名服务数" }];
}

// TemplateBoundUnnamedAppDetail is template bound unnamed app detail.
message TemplateBoundUnnamedAppDetail {
  uint32 template_revision_id = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板文件版本ID" }];
  string template_revision_name = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板文件版本名" }];
  uint32 app_id = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  string app_name = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
}

// TemplateBoundNamedAppDetail is template bound named app detail.
message TemplateBoundNamedAppDetail {
  uint32 template_revision_id = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板文件版本ID" }];
  string template_revision_name = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板文件版本名" }];
  uint32 app_id = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  string app_name = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
  uint32 release_id = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本ID" }];
  string release_name = 6 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本名" }];
}

// TemplateBoundTemplateSetDetail is template bound unnamed app detail.
message TemplateBoundTemplateSetDetail {
  uint32 template_set_id = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板套餐ID" }];
  string template_set_name = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板套餐名" }];
}

// MultiTemplateBoundTemplateSetDetail is multiple templates bound unnamed app detail.
message MultiTemplateBoundTemplateSetDetail {
  uint32 template_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板文件ID" }];
  string template_name = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板文件名" }];
  uint32 template_set_id = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板套餐ID" }];
  string template_set_name = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板套餐名" }];
}

// TemplateRevisionBoundUnnamedAppDetail is template release bound unnamed app detail.
message TemplateRevisionBoundUnnamedAppDetail {
  uint32 app_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  string app_name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
}

// TemplateRevisionBoundNamedAppDetail is template release bound named app detail.
message TemplateRevisionBoundNamedAppDetail {
  uint32 app_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  string app_name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
  uint32 release_id = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本ID" }];
  string release_name = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本名" }];
}

// TemplateSetBoundUnnamedAppDetail is template set bound unnamed app detail.
message TemplateSetBoundUnnamedAppDetail {
  uint32 app_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  string app_name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
}

// MultiTemplateSetBoundUnnamedAppDetail is template set bound unnamed app detail.
message MultiTemplateSetBoundUnnamedAppDetail {
  uint32 template_set_id = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板套餐ID" }];
  string template_set_name = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板套餐名" }];
  uint32 app_id = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  string app_name = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
}

// TemplateSetBoundUnnamedAppDetail is template set bound named app detail.
message TemplateSetBoundNamedAppDetail {
  uint32 app_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  string app_name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
  uint32 release_id = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本ID" }];
  string release_name = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本名" }];
}

// LatestTemplateBoundUnnamedAppDetail is the latest template bound unnamed app detail.
message LatestTemplateBoundUnnamedAppDetail {
  uint32 template_set_id = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板套餐ID" }];
  string template_set_name = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模板套餐名" }];
  uint32 app_id = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  string app_name = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
}
